Fixed button text appearing in wrong color.

--- a/frontend/src/stylesheets/Root.css
+++ b/frontend/src/stylesheets/Root.css
@@ -30,3 +30,7 @@ nav a:hover {
     background-color: #ffffff;
     color: black;
 }
+
+nav li:hover {
+    background-color: #ffffff;
+}
